--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
     <h1>Remox</h1>
     <nav id="info">
         <P>سلام من رموکسم و این یکی دیگه از نمونه کار های منه که پایه اش جاوااسکریپته</P>
-        <p>این پروژه درباره آّب و هواست و قابلیت هایی مثل ، آّب و هوا با اسم شهرها ، پیش بینی آب و هوا و غیره داره</p>
+        <p>این پروژه درباره آب و هواست و قابلیت هایی مثل ، آب و هوا با اسم شهرها ، پیش بینی آب و هوا و غیره داره</p>
         <p>این سایت از صفر توسط خودم ساخته شده اگر میخواید که منو بهتر بشناسید میتونید به سایت شخصی من که لینکش پایینه سر بزنید</p>
         <div id="a">
         <p><a href="https://remox-main.netlify.app">remox-main</a></p>
@@ -42,4 +42,5 @@
  <div class="bg-balls"></div>
 <script src="second.js"></script>
     </body>
+
     </html>
